[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "time", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
