[package]
name = "config"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
domain = { path = "../domain" }
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
