[package]
name = "discord"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent = { path = "../agent" }
anyhow = "1.0"
config = { path = "../config" }
domain = { path = "../domain" }
observer = { path = "../observer" }
pairing = { path = "../pairing" }
queue = { path = "../queue" }
routing = { path = "../routing" }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
serde_json = "1.0"
store = { path = "../store" }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
