[package]
name = "heartbeat"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent = { path = "../agent" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
config = { path = "../config" }
domain = { path = "../domain" }
observer = { path = "../observer" }
queue = { path = "../queue" }
session = { path = "../session" }
store = { path = "../store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4"] }
