[package]
name = "plugins"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread", "macros"] }
tracing = "0.1"
