[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
domain = { path = "../domain" }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "io-util", "fs"] }
tracing = "0.1"
