[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
domain = { path = "../domain" }
futures-util = "0.3"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "io-util", "fs", "sync", "net"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
