[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "clawpod"
path = "src/main.rs"

[dependencies]
agent = { path = "../agent" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = { path = "../config" }
discord = { path = "../discord" }
domain = { path = "../domain" }
heartbeat = { path = "../heartbeat" }
observer = { path = "../observer" }
pairing = { path = "../pairing" }
plugins = { path = "../plugins" }
queue = { path = "../queue" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runner = { path = "../runner" }
server = { path = "../server" }
slack = { path = "../slack" }
store = { path = "../store" }
serde_json = "1.0"
telegram = { path = "../telegram" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
