[package]
name = "slack"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent = { path = "../agent" }
anyhow = "1.0"
config = { path = "../config" }
domain = { path = "../domain" }
futures-util = "0.3"
observer = { path = "../observer" }
pairing = { path = "../pairing" }
queue = { path = "../queue" }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
routing = { path = "../routing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
store = { path = "../store" }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
