[package]
name = "store"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "../domain" }
pairing = { path = "../pairing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
