[package]
name = "team"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent = { path = "../agent" }
anyhow = "1.0"
domain = { path = "../domain" }
routing = { path = "../routing" }
futures = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
