[package]
name = "telegram"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent = { path = "../agent" }
anyhow = "1.0"
config = { path = "../config" }
domain = { path = "../domain" }
observer = { path = "../observer" }
pairing = { path = "../pairing" }
queue = { path = "../queue" }
routing = { path = "../routing" }
store = { path = "../store" }
teloxide = { version = "0.13", features = ["ctrlc_handler"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
